--- a/JS Applications/09.Single Page Applications/spa-demo/index.html
+++ b/JS Applications/09.Single Page Applications/spa-demo/index.html
@@ -13,6 +13,22 @@
         <button id="aboutBtn">About</button>
     </nav>
     <h1>SPA Demo</h1>
-    <main></main>
+    <main>
+        <section id="homeView">
+            <h2>Home Page</h2>
+            <p>Welcome to our side!</p>
+        </section>
+
+        <section id="catalogView">
+            <h2>Catalog</h2> <ul>
+                <li>Product1</li>
+                <li>Product2</li>
+                <li>Product3</li></ul >
+        </section>
+
+        <section id="aboutView">
+            <h2>About us</h2><p>Phone: 0176...</p>
+        </section>
+    </main>
 </body>
 </html>
