--- a/JS Applications/09.Single Page Applications/spa-demo/index.html
+++ b/JS Applications/09.Single Page Applications/spa-demo/index.html
@@ -5,12 +5,18 @@
   <title>SPA Demo</title>
   <script src="src/app.js" type="module"></script>
 
+  <style>
+    section{
+        display: none;
+    }
+  </style>
+
 </head>
 <body>
     <nav>
-        <button id="homeBtn">Home</button>
-        <button id="catalogBtn">Catalog</button>
-        <button id="aboutBtn">About</button>
+        <a href="/" id="homeBtn">Home</a>
+        <a href="/" id="catalogBtn">Catalog</a>
+        <a href="/" id="aboutBtn">About</a>
     </nav>
     <h1>SPA Demo</h1>
     <main>
