--- a/JS Applications/09.Single Page Applications/spa-demo/index.html
+++ b/JS Applications/09.Single Page Applications/spa-demo/index.html
@@ -6,7 +6,7 @@
   <script src="src/app.js" type="module"></script>
 
   <style>
-    section{
+    #views {
         display: none;
     }
   </style>
@@ -19,22 +19,22 @@
         <a href="/" id="aboutBtn">About</a>
     </nav>
     <h1>SPA Demo</h1>
-    <main>
-        <section id="homeView">
-            <h2>Home Page</h2>
-            <p>Welcome to our side!</p>
-        </section>
+    <main>    </main>
 
-        <section id="catalogView">
-            <h2>Catalog</h2> <ul>
-                <li>Product1</li>
-                <li>Product2</li>
-                <li>Product3</li></ul >
-        </section>
+        <div id="views">
+            <section id="homeView">
+                <h2>Home Page</h2>
+                <p>Welcome to our side!</p>
+            </section>
+    
+            <section id="catalogView">
+                <h2>Catalog</h2> <ul></ul >
+            </section>
+    
+            <section id="aboutView">
+                <h2>About us</h2><p>Phone: 0176...</p>
+            </section>
+        </div>
 
-        <section id="aboutView">
-            <h2>About us</h2><p>Phone: 0176...</p>
-        </section>
-    </main>
 </body>
 </html>
