--- a/JS Advanced/9.DOM Introduction/A06/tamplate.html
+++ b/JS Advanced/9.DOM Introduction/A06/tamplate.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Colorize Table</title>
 </head>
 <body>
 <table>
-    <tbody>
-    <tr><th>Product</th><th>Cost</th></tr>
-    <tr><td>Beer</td>   <td>2.88</td></tr>
-    <tr><td>Fries</td>  <td>2.15</td></tr>
-    <tr><td>Burger</td> <td>4.59</td></tr>
-    <tr><td>Total:</td> <td id="sum"></td></tr>
-    </tbody>
+    <tr><th>Name</th><th>Town</th></tr>
+    <tr><td>Eve</td><td>Sofia</td></tr>
+    <tr><td>Nick</td><td>Varna</td></tr>
+    <tr><td>Didi</td><td>Ruse</td></tr>
+    <tr><td>Tedy</td><td>Varna</td></tr>
 </table>
-<button onclick="sumTable()">Sum</button>
-<script src="SumTable.js"></script>
+<button onclick="colorize()">Colorize</button>
+<script src="ColorizeTable.js"></script>
 </body>
 </html>
