--- a/JS Advanced/10.Exercise: DOM Introduction/A06/template.html
+++ b/JS Advanced/10.Exercise: DOM Introduction/A06/template.html
@@ -3,17 +3,60 @@
 
 <head>
     <link rel="stylesheet" href="template.css">
-    <script src="solution.js"></script>
-    <title>Format the Text</title>
+    <title>TABLE - SEARCH ENGINE</title>
+    <script src="./solution.js"></script>
 </head>
 
 <body>
-    <h4>Create a functionality which formats the given text into paragraphs</h4>
-    <div id="exercise">
-        <textarea id="input" cols="30" rows="12"></textarea>
-        <button type="button" id="formatItBtn" onclick="solve()">Format</button>
-        <div id="output"></div>
-    </div>
+    <table class="container">
+        <thead>
+            <tr>
+                <th>Student name</th>
+                <th>Student email</th>
+                <th>Student course</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <td colspan="3">
+                    <input type="text" id="searchField" />
+                    <button type="button" id="searchBtn">Search</button>
+                </td>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td>John Dan</td>
+                <td>john@john-dan.com</td>
+                <td>JS-CORE</td>
+            </tr>
+            <tr>
+                <td>Max Peterson</td>
+                <td>max@softuni.bg</td>
+                <td>JS-WEB</td>
+            </tr>
+            <tr>
+                <td>Philip Anderson</td>
+                <td>philip@softuni.bg</td>
+                <td>FRONT-END</td>
+            </tr>
+            <tr>
+                <td>Sam Lima</td>
+                <td>sam@gmail.com</td>
+                <td>TECH-JS</td>
+            </tr>
+            <tr>
+                <td>Eva Longoria</td>
+                <td>eva@gmail.com</td>
+                <td>All possible courses</td>
+            </tr>
+        </tbody>
+    </table>
+    <div id="result"></div>
+
+    <script>
+        solve();
+    </script>
 </body>
 
 </html>
