--- a/JS Advanced/11.DOM Manipulations and Events/A03/index.html
+++ b/JS Advanced/11.DOM Manipulations and Events/A03/index.html
@@ -9,16 +9,41 @@ Submit your solutions in the SoftUni judge system at https://judge.softuni.org/C
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Add/Delete</title>
+    <title>Delete from Table</title>
 </head>
 
 <body>
-    <h1>List of Items</h1>
-    <main>
-        <ul id="items"></ul>
-        <input type="text" id="newItemText" />
-        <input type="button" value="Add" onclick="addItem()">
-    </main>
+    <table border="1" id="customers">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Eve</td>
+                <td>eve@gmail.com</td>
+            </tr>
+            <tr>
+                <td>Nick</td>
+                <td>nick@yahooo.com</td>
+            </tr>
+            <tr>
+                <td>Didi</td>
+                <td>didi@didi.net</td>
+            </tr>
+            <tr>
+                <td>Tedy</td>
+                <td>tedy@tedy.com</td>
+            </tr>
+        </tbody>
+    </table>
+    <label>
+        Email: <input type="text" name="email" />
+        <button onclick="deleteByEmail()">Delete</button>
+    </label>
+    <div id="result"></div>
     <script src="./app.js"></script>
 </body>
 
