--- a/JS Applications/19.Exam Preparation/PROJEKT/index.html
+++ b/JS Applications/19.Exam Preparation/PROJEKT/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <!--Users and Guest-->
                 <li><a href="/">Home</a></li>
-                <li><a href="/dashboard">Dashboard</a></li>
+                <li><a href="/catalog">Dashboard</a></li>
                 <!--Only Guest-->
                 <li><a class="guest" href="/login">Login</a></li>
                 <li><a class="guest" href="/register">Register</a></li>
